--- a/yourtags.html
+++ b/yourtags.html
@@ -78,6 +78,7 @@
 					   	var $image_url = data.businesses[i].image_url;
 					   	var $address = data.businesses[i].location.address;
 					   	var $city = data.businesses[i].location.city;
+					   	var $state_code = data.businesses[i].location.state_code;
 					   	var $neighborhoods = data.businesses[i].location.neighborhoods;
 					   	if(typeof($neighborhoods) == 'undefined') $neighborhoods = '';
 					   	var $rating_img_url = data.businesses[i].rating_img_url;
@@ -85,7 +86,7 @@
 					   	var $url = data.businesses[i].url;
 					   	var $tags = data.businesses[i].tags;
 
-					    $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div> <div class="span3 pull-left"><h4 class="yelp-red">' + $name + '</h4> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left biz-tags"><h4> Your Tags </h4></div></div></a>');
+					    $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div> <div class="span3 pull-left"><h4 class="yelp-red">' + $name + '</h4> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + ', ' + $state_code + '</address></div><div class="span4 pull-left biz-tags"><button class="pull-right btn btn-large btn-success"> Edit Tags! </button><h4> Your Tags </h4></div></div></a>');
 
 					     processTags($tags, $id);
 					     processCategories($categories, $id);
