--- a/tag-assignment-wrapper.html
+++ b/tag-assignment-wrapper.html
@@ -17,57 +17,16 @@
     	<script src="js/yelp-wrapper.js"></script>
     	<script src="js/mustache.js"></script>
     	<script src="js/jquery_1.8.2.min.js"></script>
-    	<script type="text/javascript">
-			function addTag(e) {
-				var $e = $(e);
-				
-				$e.attr('onclick', '').unbind('click');
-
-				$e.remove();
-				$e.appendTo($('#chosen-tags'));
-				$remove = $e.find($('.tag-remove'));
-				$remove.css('display', 'inline');
-				$e.removeClass('tag-clickable');
-			}
-
-			function createTag() {
-				var $newtag = $("#new-tag").val();
-				$("#chosen-tags").append('<span id="' + $newtag + '" class="tag">' + $newtag + '<span class="tag-remove"> | <a href="#" onclick="removeTag(this,\'' + $newtag + '\');">X</a></span></span>');
-				$("#new-tag").val("");
-				$("#new-tag").attr("placeholder", "type new tag name...");
-
-				return false;
-			}
-
-			function removeTag(e, tagname) {
-				$e = $(e);
-				$tag = $e.parent().parent();
-				$remove = $tag.find($('.tag-remove'));
-				$remove.css('display', 'none');
-				$tag.addClass('tag-clickable');
-
-				var tagcat = $("#" + tagname).attr("data-tagcat");
-
-				if(tagcat) {
-					$tag.appendTo($('#' + tagcat));
-
-					var rebind = function() {
-						$tag.bind('click', function() {
-							addTag($tag);
-						});	
-					}
-					setTimeout(rebind, 300);	
-				} else {
-					$tag.remove();
-				}
-				
-			}
-		</script>
+    	<script type="text/javascript" src="js/tag-assignment.js"></script>
 	</head>
 	<body>
+	     <div id="screen" class="screen" style="visibility: hidden;">&nbsp;</div>
+	    <button type="button" class="btn btn-primary" onclick="showTagIt()">show</button>
+
 		<br />
 		<br />
-		<div class="tag-assignment-wrapper">
+<!-- 		<div class="tagIt">&nbsp;</div> -->
+		<div id="tagIt" style="visibility: hidden;" class="tag-assignment-wrapper">
 			<h2>Choose tags for<span id"business-name" class="yelp-red"> Joe's Pizza </span></h2>
 			<div id="chosen-tags" class="tag-container">
 				<span class="tag">Sushi 
