--- a/yourtags.html
+++ b/yourtags.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="js/fs-wrapper.js"></script>
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link href="styles.css" rel="stylesheet" />
 	<!-- <link href="bootstrap/css/style.css?a1" rel="stylesheet" /> -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script>
-    <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/tag-filter.js"></script>
-    <script src="js/fs-wrapper.js"></script>
+    
     <script src="js/yelp-wrapper.js"></script>
     <script src="js/mustache.js"></script>
     <script src="js/jquery_1.8.2.min.js"></script>
@@ -43,16 +42,13 @@
 				$remove.css('display', 'none');
 			}
 
-			function loadExistingTags(file) {
+			function loadExistingTags(tags) {
 				// Pulls user's existing tags from file and displays them in the div#existing-tags as clickable tags. 
-				$.get(file, 
-					function(data){
-					var i = 0;
-					var $tags = data.businesses[i].tags; 
-				   	jQuery.each($tags, function(i, val) {
-				   		$('#existing-tags').append('<span id ="' + val + '" class="tag tag-clickable clear-both pull-left" onclick="addTag(this);">' + val + '<button class="close tag-remove" style="display:none; color: white;">&times;</button></span>');
-				   	});
-				   }, "json");
+				tags.sort();
+			   	for(var i = 0; i < tags.length; i++) {
+			   		var tag = tags[i];
+			   		$('#existing-tags').append('<span id ="' + tag + '" class="tag tag-clickable clear-both pull-left" onclick="addTag(this);">' + tag + '<button class="close tag-remove" style="display:none; color: white;">&times;</button></span>');
+			   	}
 			}
 
 			function getChosenTags() {
@@ -107,9 +103,20 @@
 				});
 				}
 			}
+
+			$(document).ready( function () { 
+				var delayed = function() {
+					getTags(function (tags){
+						loadExistingTags(tags);
+					});	
+				}
+
+				setTimeout(delayed, 500);
+				
+			});
 		</script>
 </head>
-<body onload="loadExistingTags('existing-tags.txt')">
+<body>
 	<div id="body-wrapper">
 		<div class="container">
 			<!-- Navbar and Search Bar -->
