Added basic lightbox

--- a/tag-assignment-wrapper.html
+++ b/tag-assignment-wrapper.html
@@ -29,7 +29,10 @@
 	<body>
 		<br />
 		<br />
-		<div class="tag-assignment-wrapper">
+		<button onclick="showTagIt()">onclick</button>
+		<button onclick="hideTagIt()">onclick</button>
+		<div id="screen" style="visibility: hidden" class="screen">&nbsp;</div>
+		<div id="tagit" style="visibility: hidden" class="tag-assignment-wrapper">
 			<h2>Choose tags for <span id="business-name" class="yelp-red"> Joe's Pizza </span></h2>
 			<div id="chosen-tags" class="tag-container">
 
