--- a/tag-assignment-wrapper.html
+++ b/tag-assignment-wrapper.html
@@ -19,9 +19,13 @@
     	<script type="text/javascript">
 
 			$(document).ready( function (){ 
-				$.getJSON('data_wrapper.json', function(data) {
-					tagItLoad(data[0]);
-				});	
+				var delayed = function() {
+					$.getJSON('data_wrapper.json', function(data) {
+						tagItLoad(data[0]);
+					});		
+				}
+				
+				setTimeout(delayed, 500);
 			});
 
 		</script>
@@ -31,8 +35,7 @@
 		<br />
 		<button onclick="showTagIt()">onclick</button>
 		<button onclick="hideTagIt()">onclick</button>
-		<div id="screen" style="visibility: hidden" class="screen">&nbsp;</div>
-		<div id="tagit" style="visibility: hidden" class="tag-assignment-wrapper">
+		<div id="tagit" class="tag-assignment-wrapper">
 			<h2>Choose tags for <span id="business-name" class="yelp-red"> Joe's Pizza </span></h2>
 			<div id="chosen-tags" class="tag-container">
 
