--- a/yourtags.html
+++ b/yourtags.html
@@ -9,9 +9,9 @@
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/tag-filter.js"></script>
-    
     <script src="js/yelp-wrapper.js"></script>
     <script src="js/mustache.js"></script>
+    <script src="js/tag_assignment.js"></script>
     <script src="js/jquery_1.8.2.min.js"></script>
     <script id="tagged-object-template" type="text/template">
     	{{#.}}
@@ -28,10 +28,11 @@
 		    		<address>{{yelp_obj.display_phone}}</address>
 		    	</div>
 		    	<div class="span6 pull-left biz-tags">
-		    		<button class="pull-right btn btn-small btn-success"> Edit </button>
+		    		<button class="pull-right btn btn-small btn-success"
+		    			onclick="return editObject('{{yelp_obj.id}}');"> Edit </button>
 
 		    		{{#tags}}
-				    <span id="{{.}}" class="tag">{{.}}<span class="tag-remove"> | <a href="#" onclick="removeTagFromId(this,'{{.}}', '{{yelp_obj.id}}'');">X</a></span></span>
+				    <span id="{{.}}" class="tag">{{.}}<span class="tag-remove"> | <a href="#" onclick="return removeTagFromId(this,'{{.}}', '{{yelp_obj.id}}');">X</a></span></span>
 				    {{/tags}}
 		    	</div>
 		    </div>
@@ -46,7 +47,7 @@
 				$e.attr('onclick', 'removeTag(this)');
 
 				$e.remove();
-				$e.appendTo($('#chosen-tags'));
+				$e.appendTo($('#filter-tags'));
 				$remove = $e.find($('.tag-remove'));
 				$remove.css('display', 'inline');
 
@@ -54,16 +55,26 @@
 				//	$("#tag-list").val($('#tag-list').val() + '"' + $e.attr("id") + '"'); 
 			}
 
-			function removeTag(e) {
+			function removeTagFromId(e, tag, id) {
 				// Removes the tag e from div#chosen-tags and adds it back to div#existing-tags. 
 				var $e = $(e);
+				$e.parent().parent().remove();
 
-				$e.attr('onclick', 'addTag(this)');
-				$e.addClass('tag-clickable clear-both');
+				var obj = getObjectById(id);
 
-				$e.appendTo($('#existing-tags'));
-				$remove = $e.find($('.tag-remove'));
-				$remove.css('display', 'none');
+				var tags = [];
+
+				for(var i = 0; i < obj.tags.length; i++) {
+					if(obj.tags[i] != tag) {
+						tags.push(obj.tags[i]);
+					}
+				}
+
+				obj.tags = tags;
+
+				updateTags(obj);
+
+				return false;
 			}
 
 			function loadExistingTags(tags) {
@@ -75,44 +86,38 @@
 			   	}
 			}
 
-			function getChosenTags() {
+			function getFilterTags() {
 				// Puts all selected tags into the #tag-list search form. File System API will use this list of tags to retrieve businesses. 
 
 				$("#tag-list").val("");
-				$("#chosen-tags span").each(function(index) {
+				$("#filter-tags span").each(function(index) {
 					$("#tag-list").val($('#tag-list').val() + ' "' + $(this).attr("id") + '"');
 				})
 			}
 
+			function editObject(id) {
+				var object = getObjectById(id);
+				startTagItWithObject(object);
+			}
+
+			function getObjectById(id) {
+				for(var i = 0; i < resultObjects.length; i++) {
+					if(resultObjects[i].yelp_obj.id == id) {
+						return resultObjects[i];
+					}
+				}
+
+				return undefined;
+			}
+
+			var resultObjects;
 			function displayResults() {
-				getChosenTags();
+				getFilterTags();
 				getTaggedObjects(function(objs) {
+					resultObjects = objs;
 					var template = $('#tagged-object-template').html();
 					var html = Mustache.to_html(template, objs);
 					$('#results').html(html);
-					// var numResults = objs.length;
-				 //   	for (i = 0; i < numResults; i++) {
-
-
-					   	// var $id = data.businesses[i].id;
-					   	// var $name = data.businesses[i].name;
-					   	// var $categories = data.businesses[i].categories;
-					   	// var $display_phone = data.businesses[i].display_phone;
-					   	// var $image_url = data.businesses[i].image_url;
-					   	// var $address = data.businesses[i].location.address;
-					   	// var $city = data.businesses[i].location.city;
-					   	// var $state_code = data.businesses[i].location.state_code;
-					   	// var $neighborhoods = data.businesses[i].location.neighborhoods;
-					   	// if(typeof($neighborhoods) == 'undefined') $neighborhoods = '';
-					   	// var $rating_img_url = data.businesses[i].rating_img_url;
-					   	// var $review_count = data.businesses[i].review_count;
-					   	// var $url = data.businesses[i].url;
-					   	// var $tags = data.businesses[i].tags;
-
-					    // $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div> <div class="span3 pull-left"><h4 class="yelp-red">' + $name + '</h4> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + ', ' + $state_code + '</address></div><div class="span4 pull-left biz-tags"><button class="pull-right btn btn-large btn-success"> Edit Tags! </button><h4> Your Tags </h4></div></div></a>');
-
-					    //  processTags($tags, $id);
-					    //  processCategories($categories, $id);
 				   });
 					
 				function processTags(e, id) {
@@ -128,6 +133,10 @@
 						$("#" + id + " p.categories").append(val[0] + ", ");
 				});
 				}
+			}
+
+			var submitCallback = function() {
+				displayResults();
 			}
 
 			$(document).ready( function () { 
@@ -169,7 +178,7 @@
 				<div class="span10">
 					<!-- Main content for filtered businesses go here -->
 					<button type="submit" class="btn btn-info pull-left" onclick="displayResults()"> Filter </button>
-		  			<div id="chosen-tags" class="span10 well well-small pull-left clear-right">
+		  			<div id="filter-tags" class="span10 well well-small pull-left clear-right">
 					</div>
 					<input type="text" id="tag-list" class="input-large span12 search-query" placeholder="tags">
 					<div>
@@ -183,5 +192,34 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="tagit" style="display:none;">
+      <div class="tag-assignment-wrapper">
+        <h2>Choose tags for <span id="tagit-business-name" class="yelp-red"> Joe's Pizza </span></h2>
+        <div id="tagit-chosen-tags" class="tag-container">
+
+        </div>
+        <h2>Existing Tags</h2>
+        <div id="tagit-existing-tags" class="tag-container">
+        </div>
+
+        <h2>Recommended Tags</h2>
+        <div id="tagit-recommended-tags" class="tag-container">
+
+        </div>
+
+        <h2>Add New Tag</h2>
+        <form onsubmit="return createTag()">
+          <input id="new-tag" type="text" style="width: 300px;font-size:18px;"/> 
+          <button type="submit" class="button" onclick="return tagIt_createTag()">Add</button>
+        </form>
+
+        <div style="clear: both;"></div>
+        <div style="text-align:right;padding: 30px;">
+          <a href="#" class="button" onclick="return tagIt_submitTags(submitCallback);">Submit</a>
+        </div>
+      </div>
+    </div>
+    <div id="screen" style="display:none;">&nbsp;</div>
 <body>
 </html>
