--- a/yourtags.html
+++ b/yourtags.html
@@ -4,9 +4,8 @@
 	<script src="js/fs-wrapper.js"></script>
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
-	<link href="styles.css" rel="stylesheet" />
-	<!-- <link href="bootstrap/css/style.css?a1" rel="stylesheet" /> -->
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="styles.css" rel="stylesheet" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/tag-filter.js"></script>
     <script src="js/yelp-wrapper.js"></script>
@@ -230,6 +229,7 @@
 
 	<div id="tagit" style="display:none;">
       <div class="tag-assignment-wrapper">
+      	<button class="close" style="color: black;font-size:2em;" onclick="hideTagIt();">&times;</button>
         <h2>Choose tags for <span id="tagit-business-name" class="yelp-red"> Joe's Pizza </span></h2>
         <div id="tagit-chosen-tags" class="tag-container">
 
@@ -244,13 +244,14 @@
         </div>
 
         <h2>Add New Tag</h2>
-        <form onsubmit="return createTag()">
-          <input id="new-tag" type="text" style="width: 300px;font-size:18px;"/> 
-          <button type="submit" class="button" onclick="return tagIt_createTag()">Add</button>
+        <form onsubmit="return tagIt_createTag()">
+          <input id="new-tag" type="text" style="width: 380px;font-size:18px;"/> 
+          <button type="submit" class="button" onclick="return tagIt_createTag()"
+          	style="height: 35px;padding: 5px;">Add</button>
         </form>
 
         <div style="clear: both;"></div>
-        <div style="text-align:right;padding: 30px;">
+        <div style="text-align:center;padding: 10px;">
           <a href="#" class="button" onclick="return tagIt_submitTags(submitCallback);">Submit</a>
         </div>
       </div>
