Added intro text to hero-unit

--- a/search-results.html
+++ b/search-results.html
@@ -205,10 +205,15 @@
         </div>
      
         <!-- Hero Unit -->
-        <div class="hero-unit dl-horizontal clearfix" style="display: inline;">
-          <img src="bootstrap/img/yelp logo.png" class="img-small pull-right">
-          <h1 class="pull-up">Yelp</h1>
-          <div class="pull-down">Yelp is the best way to find great local business</div>
+        <div class="hero-unit dl-horizontal clearfix" >
+          <img src="bootstrap/img/yelp logo.png" class="img-small pull-right thumbnail">
+          <h1 class="pull-up">Yelp Bookmarks</h1>
+          <div class="pull-down">
+            <h3> 1. Search for Businesses</h3>
+            <h3> 2. Click "Tag It!" to add tags to business (i.e. "italian")</h3>
+            <h3> 3. Go to <a href="yourtags.html"> Your Tags </a> to view and filter your tagged businesses</h3>
+            Click <a href="usermanual.pdf">  <strong> here  </strong>  </a> to download the User Manual
+          </div>
         </div>
        
         <div id="searching" class = "well form-horizontal hide alert alert-info">
