--- a/search-results.html
+++ b/search-results.html
@@ -230,7 +230,7 @@
        
         <!-- Search Results -->
         <div id="results"></div>
-
+          <a href="usermanual.pdf">Help <img src="bootstrap/img/help.jpg" class="pull-left" style="height: 25px; width: 25px;"></a>
         <div id="showtotalresults" class="well-small hide form-horizontal pull-right">
           <b>Results per page  <select style="width:50px" id="totalresults" class = "form-horizontal" onChange="searchResults(this.value)">  </select></b>
          
