Added lineheight for tags.

--- a/search-results.html
+++ b/search-results.html
@@ -40,7 +40,7 @@
             <img src="{{o.rating_img_url}}"><br /> {{o.review_count}} reviews 
             <address>{{o.display_phone}}<br>{{o.location.address}}<br>{{o.location.city}}, {{o.location.state_code}}</address>
           </div>
-          <div class="span2 middle pull-left">
+          <div class="span2 middle pull-left" style="line-height: 200%;">
                 {{#tags}}
                   <span id="{{.}}" class="tag">{{.}}</span>
                 {{/tags}}
