Allowing enter completion.

--- a/search-results.html
+++ b/search-results.html
@@ -183,7 +183,9 @@
               <form class="form-search search-bar" onsubmit="return searchResults(0);">
                   <input type="text" id="query" class="input-large span6 search-query" placeholder="search for (e.g. Mexican, Joe's Pizza, cheap)">
                   <input type="text" id="zip" class="input-large span2 search-query" placeholder="Location">
-                  <button type="button" class="btn btn-primary" onclick="return searchResults(0);">Search for places</button>
+                  <button type="button" class="btn btn-primary" onclick="return searchResults(0);"
+                  >Search for places</button>
+                  <input type="submit" style="position:fixed;left: -100px;" />
               </form>
               </div>
             </li>
