--- a/search-results.html
+++ b/search-results.html
@@ -25,9 +25,7 @@
             <img class="thumbnail" src="{{o.image_url}}">
           </div>
           <div class="span4 pull-left">
-            <a href="{{o.url}}">
-              <h4 class="yelp-red">{{o.name}}</h4>
-            </a> 
+            <h4 class="title"><a href="{{o.url}}">{{o.name}}</a></h4>
             <p><b> Neighborhoods: </b>{{o.neighborhoods}}</p>
             <p class="categories"><b> Categories: </b>
               {{#o.categories}}
