--- a/yourtags.html
+++ b/yourtags.html
@@ -23,7 +23,7 @@
 		    	</div>
 		    	<div class="middle span3 pull-left"> 
 		    		<img src="{{yelp_obj.rating_img_url}}"> {{yelp_obj.review_count}} reviews 
-		    		<address>{{yelp_obj.display_phone}}</address>
+		    		<address style="margin-bottom: 0px;">{{yelp_obj.display_phone}}</address>
 		    	</div>
 		    	<div class="span5 pull-left biz-tags" style="overflow: wrap;line-height: 200%;">
 
