Added back filter button.

--- a/yourtags.html
+++ b/yourtags.html
@@ -235,7 +235,10 @@
 				</div>
 				<div class="span10">
 					<!-- Main content for filtered businesses go here -->
-		  			<div id="filter-tags" class="well " style="padding-top:5px;">
+					<button type="submit" 
+						style="margin-top: 8px;"
+						class="btn btn-info pull-right" onclick="displayResults()">Filter</button>
+		  			<div id="filter-tags" class="well " style="padding-top:5px; margin-right: 60px;">
 					</div>
 					<div class="clear-right">
 						<h3> Filtered Results </h3>
