--- a/search-results.html
+++ b/search-results.html
@@ -6,11 +6,11 @@
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="bootstrap/css/style.css?a1" rel="stylesheet" />
+<!--     <link href="bootstrap/css/style.css?a1" rel="stylesheet" /> -->
     <link href="styles.css" rel="stylesheet" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script>
-    <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
+<!--     <script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script> -->
+<!--     <script src="scripts/bootstrap.min.js" type="text/javascript"></script> -->
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
     <script src="js/fs-wrapper.js"></script>
