Fixed page number text.

--- a/search-results.html
+++ b/search-results.html
@@ -224,7 +224,7 @@
         <div id="results"></div>
           <a href="usermanual.pdf">Help <img src="bootstrap/img/help.jpg" class="pull-left" style="height: 25px; width: 25px;"></a>
         <div id="showtotalresults" class="well-small hide form-horizontal pull-right">
-          <b>Results per page  <select style="width:50px" id="totalresults" class = "form-horizontal" onChange="searchResults(this.value)">  </select></b>
+          <b>Page  <select style="width:50px" id="totalresults" class = "form-horizontal" onChange="searchResults(this.value)">  </select></b>
          
         </div>
       </div>
